--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
     @apply flex flex-col items-center justify-center;
   }
   .unitSelection{
-    @apply hover:cursor-pointer hover:bg-black/10 px-1;
+    @apply hover:cursor-pointer px-2 text-center hover:bg-black/10;
   }
+  
 }
